--- a/.github/workflows/try.yml
+++ b/.github/workflows/try.yml
@@ -13,6 +13,6 @@ jobs:
     steps:
       - uses: aws-actions/configure-aws-credentials@v1
         with:
-          role-to-assume: <作成したIAM RoleのARN>
+          role-to-assume: arn:aws:iam::772396318513:role/festa-github-actions-role
           aws-region: ap-northeast-1
       - run: aws iam list-roles
